# continuo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  data.json  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
doc/manual/: Makefile  README.md  api.rst  cli.rst  conf.py  examples.rst  grids.rst  index.rst  (+5 more)
examples/: benchmark_solvers.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_3aa42b65ece32876___init___py.html  z_3aa42b65ece32876_eval_py.html  z_3aa42b65ece32876_expand_py.html  z_3aa42b65ece32876_lex_py.html  z_3aa42b65ece32876_linemap_py.html  z_3c733fb6d3c5362a___init___py.html  z_3c733fb6d3c5362a_api_py.html  z_3c733fb6d3c5362a_cli_py.html  z_4f3d4cb185933847___init___py.html  z_4f3d4cb185933847_errors_py.html  z_4f3d4cb185933847_native_py.html  z_4f3d4cb185933847_residual_py.html  z_4f3d4cb185933847_translate_py.html  z_5202e292e99fa925___init___py.html  z_5202e292e99fa925__exprtools_py.html  z_5202e292e99fa925_boundary_py.html  z_5202e292e99fa925_build_py.html  z_5202e292e99fa925_classify_py.html  z_5202e292e99fa925_commands_py.html  z_5202e292e99fa925_constraints_py.html  z_5202e292e99fa925_errors_py.html  z_5202e292e99fa925_model_py.html  z_5202e292e99fa925_reduce_py.html  z_5202e292e99fa925_shocks_py.html  z_5202e292e99fa925_steady_state_py.html  z_8a1ae766410ae3da___init___py.html  z_8a1ae766410ae3da_collocation_py.html  z_8a1ae766410ae3da_crank_nicolson_py.html  z_8a1ae766410ae3da_grid_py.html  z_8a1ae766410ae3da_monitor_py.html  z_8a1ae766410ae3da_tableaux_py.html  z_b3e317c6bb6a7a57___init___py.html  z_b3e317c6bb6a7a57_ast_py.html  z_b3e317c6bb6a7a57_errors_py.html  z_b3e317c6bb6a7a57_transform_py.html  z_c88596d34a857c0f___init___py.html  (+12 more)
scripts/: bump-version.py
tests/: test_api.py  test_cli.py  test_smoke.py
(+194 files in other folders)
