[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "continuo"
version = "0.0.1"
description = "Continuous-time DSGE toolbox in the spirit of Dynare."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Stéphane Adjemian", email = "stepan@adjemian.eu" },
]
keywords = [
    "DSGE",
    "macroeconomics",
    "continuous-time",
    "perfect-foresight",
    "BVP",
    "DAE",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "casadi>=3.6",
    "scipy>=1.11",
    "numpy>=1.26",
    "lark>=1.1",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
xarray = ["xarray>=2023.1"]
hdf5 = ["h5py>=3.9"]
all = [
    "pandas>=2.0",
    "xarray>=2023.1",
    "h5py>=3.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "nox>=2024.3",
]
docs = [
    "sphinx>=7.0",
    "furo>=2023.0",
    "sphinx-copybutton>=0.5",
]

[project.scripts]
continuo = "continuo.cli:main"

[project.urls]
Homepage = "https://github.com/stepan-a/continuo"
Repository = "https://github.com/stepan-a/continuo"

[tool.hatch.build.targets.wheel]
packages = ["src/continuo"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
